fix: recommendation cards responsive and scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -110,9 +110,7 @@
 	}
 }
 
-::-webkit-scrollbar {
-	@apply hidden;
-}
+
 
 @layer base {
 	* {
@@ -120,7 +118,7 @@
 	}
 
 	body {
-		@apply bg-background text-foreground;
+		@apply bg-background text-foreground scrollbar-hidden;
 	}
 
 	html {
